# tgdl

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
docs/: json-api.md
tests/: test_cli.py  test_config_roundtrip.py  test_filters.py  test_jobs.py  test_organizer.py  test_profiles.py  test_state.py
tgdl/: __main__.py  auth.py  cli.py  config.py  downloader.py  filters.py  headless.py  jobs.py  organizer.py  profiles.py  reporter.py  state.py  worker.py
tgdl/tui/: wizard.py
