[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tgdl"
version = "0.2.0"
description = "A fast, scriptable CLI for downloading media from Telegram channels and chats — with smart resume, dedup, filters, profiles, and a background-job JSON API."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [{ name = "Olufemi Okikioluwa" }]
keywords = ["telegram", "downloader", "cli", "telethon", "media", "raycast"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Communications :: Chat",
    "Topic :: Multimedia",
    "Topic :: Utilities",
]
dependencies = [
    "telethon>=1.36",
    "typer>=0.12",
    "rich>=13",
    "questionary>=2.0",
    "pydantic>=2",
    "pyyaml>=6",
    "xxhash>=3",
]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.6"]

[project.urls]
Homepage = "https://github.com/Kikks/tgdl"
Repository = "https://github.com/Kikks/tgdl"
Issues = "https://github.com/Kikks/tgdl/issues"
Changelog = "https://github.com/Kikks/tgdl/blob/main/CHANGELOG.md"

[project.scripts]
tgdl = "tgdl.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["tgdl"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = [
    "E501",   # long lines tolerated (Rich markup, help strings)
    "B904",   # `raise typer.Exit(...)` inside except is the idiomatic Typer pattern
    "UP042",  # keep `str, Enum` — switching to StrEnum changes Pydantic serialization
]

[tool.pytest.ini_options]
testpaths = ["tests"]
